# trident

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
examples/: tier0_deterministic.md  tier1_ollama.md  tier2_byok.md  tier3_smaran.md
tests/: test_capture.py  test_deterministic_synth.py  test_mechanical_replay.py  test_memory_stores.py  test_tier_resolution.py
trident/: __init__.py  cli.py  config.py  tier.py
trident/capture/: adapter.py  daemon.py  hooks.py  ndjson.py  redact.py
trident/connectors/: markdown.py  notion.py  obsidian.py
trident/execute/: ksai_adapter.py  mcp_bridge.py  mechanical.py
trident/llm/: anthropic_client.py  base.py  ollama_client.py  openai_client.py  openrouter_client.py  resilient.py
trident/memory/: _embed.py  base.py  faiss_store.py  markdown_store.py  mongo_store.py  postgres_store.py  smaran_store.py
trident/synthesize/: chunker.py  deterministic.py  local_agent.py  swarm.py
trident/ui/: dashboard.py  tui.py
tui/: data.go  go.mod  main.go  model.go  styles.go  views.go
