[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trident-cli"
version = "0.1.0"
description = "Capture terminal sessions · synthesize runbooks · store as team memory · replay anywhere"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ayush Panigrahi", email = "ayushpanigrahi84@gmail.com" }]
keywords = [
    "devops", "runbook", "terminal", "cli", "memory", "mcp",
    "shellstory", "ksai", "smaran", "k8s", "kubernetes",
    "llm", "ai", "automation", "replay",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "shellstory",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiofiles>=23.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
faiss = ["faiss-cpu", "sentence-transformers"]
ollama = []   # no extra pip dep — calls Ollama HTTP API directly
byok = ["anthropic", "openai"]
postgres = ["psycopg2-binary", "pgvector"]
mongo = ["pymongo"]
mcp = ["fastmcp>=2.12"]
all = [
    "faiss-cpu",
    "sentence-transformers",
    "anthropic",
    "openai",
    "psycopg2-binary",
    "pgvector",
    "pymongo",
    "fastmcp>=2.12",
]

[project.scripts]
trident = "trident.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trident*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
